--- a/package.json
+++ b/package.json
@@ -10,17 +10,17 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/metro-runtime": "~4.0.0",
+    "@expo/metro-runtime": "~4.0.1",
     "@react-navigation/native": "^7.0.9",
     "@react-navigation/native-stack": "^7.1.10",
-    "expo": "~52.0.11",
-    "expo-status-bar": "~2.0.0",
+    "expo": "~52.0.38",
+    "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-native": "0.76.3",
-    "react-native-web": "~0.19.13",
-    "react-native-screens": "~4.1.0",
-    "react-native-safe-area-context": "4.12.0"
+    "react-native": "^0.76.7",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.4.0",
+    "react-native-web": "~0.19.13"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
