--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "@react-navigation/native": "^7.0.9",
     "@react-navigation/native-stack": "^7.1.10",
     "expo": "^54.0.15",
+    "expo-image-picker": "^17.0.8",
+    "expo-print": "^15.0.7",
+    "expo-sharing": "^14.0.7",
     "expo-status-bar": "~3.0.8",
     "jspdf": "^3.0.3",
     "react": "19.1.0",
